crates/phux-protocol/tests/snapshots/frame_wire_snapshots__cursor_field_snap_pane_diff_empty_ops_default_cursor.snap
---
source: crates/phux-protocol/tests/frame_wire_snapshots.rs
expression: dump_frame(&frame)
---
00000000 | 00 00 00 23 40 00 00 00  01 00 00 00 00 00 00 00 |...#@...........
00000010 | 01 00 00 00 00 00 00 00  00 00 00 00 00 00 00 00 |................
00000020 | 00 01 00 01 00 00 00                             |.......
