crates/phux-protocol/tests/snapshots/frame_wire_snapshots__cursor_field_snap_pane_diff_with_cursor_and_modes.snap
---
source: crates/phux-protocol/tests/frame_wire_snapshots.rs
expression: dump_frame(&frame)
---
00000000 | 00 00 00 38 40 00 00 00  42 00 00 00 00 de ad be |...8@...B.......
00000010 | ef 00 00 00 00 de ad be  ee 00 00 00 01 01 00 05 |................
00000020 | 00 09 00 00 00 01 01 00  00 00 41 01 02 00 00 00 |..........A.....
00000030 | 00 00 00 05 00 0a 01 01  00 00 31 00             |..........1.
