crates/phux-protocol/tests/snapshots/frame_wire_snapshots__snap_attach_primary.snap
---
source: crates/phux-protocol/tests/frame_wire_snapshots.rs
expression: dump_frame(&frame)
---
00000000 | 00 00 00 0d 02 00 00 00  07 64 65 66 61 75 6c 74 |.........default
00000010 | 00                                               |.
