crates/phux-protocol/tests/snapshots/frame_wire_snapshots__snap_attach_target_by_id.snap
---
source: crates/phux-protocol/tests/frame_wire_snapshots.rs
expression: dump_frame(&frame)
---
00000000 | 00 00 00 1d 02 01 04 05  02 00 00 00 07 02 04 06 |................
00000010 | 00 50 00 18 00 00 03 04  01 00 04 04 04 00 00 00 |.P..............
00000020 | 00                                               |.
