crates/phux-protocol/tests/snapshots/frame_wire_snapshots__snap_attach_target_last.snap
---
source: crates/phux-protocol/tests/frame_wire_snapshots.rs
expression: dump_frame(&frame)
---
00000000 | 00 00 00 0d 02 00 00 50  00 18 00 00 00 00 00 00 |.......P........
00000010 | 00                                               |.
