crates/phux-protocol/tests/snapshots/frame_wire_snapshots__snap_attach_viewer_empty_name.snap
---
source: crates/phux-protocol/tests/frame_wire_snapshots.rs
expression: dump_frame(&frame)
---
00000000 | 00 00 00 06 02 00 00 00  00 01                   |..........
