crates/phux-protocol/tests/snapshots/frame_wire_snapshots__snap_attach_viewport_with_pixels.snap
---
source: crates/phux-protocol/tests/frame_wire_snapshots.rs
expression: dump_frame(&frame)
---
00000000 | 00 00 00 1c 02 01 00 00  00 07 64 65 66 61 75 6c |..........defaul
00000010 | 74 00 50 00 18 01 05 00  01 02 d0 00 00 00 00 00 |t.P.............
