crates/phux-protocol/tests/snapshots/frame_wire_snapshots__snap_attached_empty_graph.snap
---
source: crates/phux-protocol/tests/frame_wire_snapshots.rs
expression: dump_frame(&frame)
---
00000000 | 00 00 00 40 81 01 04 35  00 00 00 01 00 00 00 01 |...@...5........
00000010 | 00 00 00 07 64 65 66 61  75 6c 74 00 00 00 00 00 |....default.....
00000020 | 65 53 f1 00 00 00 00 01  00 00 00 00 00 00 00 00 |eS..............
00000030 | 00 00 00 01 00 00 00 00  00 00 00 00 00 02 04 04 |................
00000040 | 00 00 00 2a                                      |...*
