crates/phux-protocol/tests/snapshots/frame_wire_snapshots__snap_attached_empty_snapshot.snap
---
source: crates/phux-protocol/tests/frame_wire_snapshots.rs
expression: dump_frame(&frame)
---
00000000 | 00 00 00 15 81 00 00 00  11 00 00 00 22 00 00 00 |............"...
00000010 | 33 00 50 00 18 00 00 00  00                      |3.P......
